WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252629
REGRESSION(
260471@main
): The platform graphics context colorspace should not be adopted
https://bugs.webkit.org/show_bug.cgi?id=252629
Summary
REGRESSION(260471@main): The platform graphics context colorspace should not ...
Said Abou-Hallawa
Reported
2023-02-20 16:03:10 PST
When storing the return raw pointer of CGIOSurfaceContextGetColorSpace() or CGBitmapContextGetColorSpace() in a RetainPtr, we should not be using adoptCF(). The RetainPtr refcount should be incremented if the colorspace is referenced in WebKit.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-02-20 16:03:51 PST
rdar://105637444
Said Abou-Hallawa
Comment 2
2023-02-20 16:47:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10413
EWS
Comment 3
2023-02-21 07:21:30 PST
Committed
260609@main
(fab6d531c24f): <
https://commits.webkit.org/260609@main
> Reviewed commits have been landed. Closing PR #10413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug